# SLAM-Navigation-in-ROS2-navigation

./: .gitignore  LICENSE  README.md  Video Demo.webm  setup.sh
.github/workflows/: build_Version1.sh  ci.yml  test.sh
docker/: Dockerfile
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/launch/: bringup.launch.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/rviz/: robot_view.rviz
src/amr_description/urdf/: base.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro
src/amr_explore/: package.xml  setup.cfg  setup.py
src/amr_explore/amr_explore/: frontier_explorer.py
src/amr_explore/launch/: explore.launch.py
src/amr_gazebo/: CMakeLists.txt  package.xml
src/amr_gazebo/config/: gz_bridge.yaml
src/amr_gazebo/launch/: gazebo.launch.py
src/amr_gazebo/worlds/: amr_world.world
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/config/: nav2_params.yaml
src/amr_navigation/launch/: navigation.launch.py
src/amr_slam/: CMakeLists.txt  package.xml
src/amr_slam/config/: slam_toolbox_params.yaml
src/amr_slam/launch/: slam.launch.py
