<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup</name>
  <version>0.1.0</version>
  <description>Master launch file that brings up Gazebo, the robot, SLAM, Nav2, and RViz</description>
  <maintainer email="Masimba249@gmail.com">Masimba</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_description</exec_depend>
  <exec_depend>amr_gazebo</exec_depend>
  <exec_depend>amr_slam</exec_depend>
  <exec_depend>amr_navigation</exec_depend>
  <exec_depend>amr_explore</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
